[package]
name = "multiping"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
console = "0.16.0"
socket2 = "0.6.0"

[lints.rust]
unsafe_code = "deny"
unreachable_pub = "warn"
unused_extern_crates = "warn"
unused_import_braces = "warn"

[lints.clippy]
todo = "warn"
empty_loop = "warn"
mem_forget = "deny"
